# SAO-Store

./: README.md  index.toml  pyproject.toml
.github/: copilot-instructions.md
docs/: implementation-plan.md  local-index-guide.md  programming-skill.md  project-overview.md  rules-reference.md  sao-integration-guide.md  skill-dev-guide.md  skills.md
docs/archived/: experts.md  sao-runtime-improvements.md
experts/: code.toml  general.toml  search.toml  translate.toml  weather.toml
sao-skill-reminder/: SKILL.toml
sao-skill-reminder/sao_skill_reminder/: __init__.py
sao_store_index/: __init__.py  __main__.py  indexer.py  searcher.py
skills/sao-skill-browser/: pyproject.toml
skills/sao-skill-browser/sao_skill_browser/: SKILL.toml  __init__.py  skill.py
skills/sao-skill-browser/tests/: test_skill.py
skills/sao-skill-copilot-cli/: pyproject.toml
skills/sao-skill-copilot-cli/sao_skill_copilot_cli/: SKILL.toml  __init__.py  skill.py
skills/sao-skill-copilot-cli/tests/: test_skill.py
skills/sao-skill-dice/: SKILL.toml  pyproject.toml
skills/sao-skill-dice/sao_skill_dice/: __init__.py  skill.py
skills/sao-skill-dice/tests/: test_skill.py
skills/sao-skill-icm/: README.md  pyproject.toml
skills/sao-skill-icm/sao_skill_icm/: SKILL.toml  __init__.py  skill.py
skills/sao-skill-icm/tests/: test_skill.py
skills/sao-skill-programming/: SKILL.toml  pyproject.toml
skills/sao-skill-programming/sao_skill_programming/: __init__.py  skill.py
skills/sao-skill-programming/tests/: test_skill.py
skills/sao-skill-reminder/: SKILL.toml  pyproject.toml
skills/sao-skill-reminder/sao_skill_reminder/: SKILL.toml  skill.py
skills/sao-skill-reminder/tests/: test_skill.py
tests/: test_store_index.py
