[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sao-skill-icm"
version = "1.0.0"
description = "查询 ICM incidents：按队列/日期/状态筛选"
requires-python = ">=3.11"
dependencies = [
    "super-agent-os>=2.0.0",
    "playwright>=1.40.0",
    "aiohttp>=3.9.0",
]

[project.entry-points."sao.skills"]
icm = "sao_skill_icm:IcmSkill"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
