[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sao-skill-reminder"
version = "1.0.0"
description = "SAO 提醒技能 — 飞书多维表格 CRUD 管理提醒/闹钟"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Selene" }]

dependencies = [
    "super-agent-os>=2.0.0",
    "lark-oapi>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.entry-points."sao.skills"]
reminder = "sao_skill_reminder:ReminderSkill"

[tool.setuptools.packages.find]
include = ["sao_skill_reminder*"]

[tool.setuptools.package-data]
sao_skill_reminder = ["SKILL.toml"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
